# mini_crm

./: .test.env  README.md  compose.yaml  pyproject.toml
.deploy/: start.sh
alembic/: env.py
alembic/versions/: 11c3b858968d_initial.py  58af92866d1a_initial.py
src/: helper.py  main.py  middlewares.py  settings.py
src/api/analytics/: dto.py  route.py  service.py
src/api/auth/: dto.py  route.py  service.py
src/api/base/: depend.py
src/api/contacts/: depend.py  dto.py  route.py  service.py
src/api/deals/: depend.py  dto.py  route.py  service.py
src/api/organizations/: depend.py  route.py  service.py
src/api/tasks/: depend.py  dto.py  route.py  service.py
src/models/: __init__.py  activity.py  contact.py  deal.py  organization.py  organization_member.py  task.py  user.py
tests/: conftest.py
tests/integration/: test_auth.py
